sfdx-source/at4dx-playground/main/schema/objects/DEV_Widget__c/DEV_Widget__c.object-meta.xml
<CustomObject>
    <label>Widget</label>
    <nameField>
        <displayFormat>Widget-{000000000}</displayFormat>
        <label>Widget Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Widgets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>