sfdx-source/at4dx-playground/main/schema/objects/DEV_Widget__c/fields/DEV_Cost__c.field-meta.xml
<CustomField>
    <fullName>DEV_Cost__c</fullName>
    <label>Cost</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>