sfdx-source/at4dx-playground/main/schema/objects/DEV_Widget__c/fields/DEV_Description__c.field-meta.xml
<CustomField>
    <fullName>DEV_Description__c</fullName>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>