sfdx-source/at4dx-playground/main/schema/objects/DEV_Widget__c/fields/DEV_FacetCount__c.field-meta.xml
<CustomField>
    <fullName>DEV_FacetCount__c</fullName>
    <label>Facet Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>