sfdx-source/at4dx-playground/main/schema/objects/DEV_Widget__c/fields/DEV_IsScrap__c.field-meta.xml
<CustomField>
    <fullName>DEV_IsScrap__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Scrap</label>
    <type>Checkbox</type>
</CustomField>