sfdx-source/at4dx-playground/main/schema/objects/DEV_Widget__c/fields/DEV_ManufacturedDate__c.field-meta.xml
<CustomField>
    <fullName>DEV_ManufacturedDate__c</fullName>
    <label>Manufactured Date</label>
    <type>Date</type>
</CustomField>