sfdx-source/at4dx-playground/main/schema/objects/DEV_Widget__c/fields/DEV_SerialGuid__c.field-meta.xml
<CustomField>
    <fullName>DEV_SerialGuid__c</fullName>
    <label>Serial Guid</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>