sfdx-source/at4dx-playground/main/schema/objects/DEV_Widget__c/fields/DEV_SoldTo__c.field-meta.xml
<CustomField>
    <fullName>DEV_SoldTo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sold To</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Widgets</relationshipLabel>
    <relationshipName>Widgets</relationshipName>
    <type>Lookup</type>
</CustomField>