sfdx-source/at4dx-playground/main/schema/objects/DEV_Widget__c/fields/DEV_Status__c.field-meta.xml
<CustomField>
    <fullName>DEV_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Designed</fullName>
            </value>
            <value>
                <fullName>Manufactured</fullName>
            </value>
            <value>
                <fullName>Tested</fullName>
            </value>
            <value>
                <fullName>Inventory</fullName>
            </value>
            <value>
                <fullName>Alloted</fullName>
            </value>
            <value>
                <fullName>Sold</fullName>
            </value>
            <value>
                <fullName>Shipped</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>